--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
 					</div>
 					<div class="contact-block mb-100">
 						<div class="ac">
-							<h2 class="ac-q">OneSkillaWeek.com | Thoughts, Advice, Startups, and more
+							<h2 class="ac-q">OneSkillaWeek.com | A Blog about Startups, Tech, Mindsets, Mental models, and Skills
 								<svg width="24px" height="24px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 									<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 										<g transform="translate(12.000000, 12.000000) rotate(-45.000000) translate(-12.000000, -12.000000) translate(4.000000, 4.000000)"
@@ -853,16 +853,13 @@
 									</g>
 								</svg>
 							</h2>
-
+							<a target="_blank"href="https://oneskillaweek.com">
 							<div class="ac-a">
-
-								<!-- Calendly inline widget begin -->
-								<div class="calendly-inline-widget" data-url="https://oneskillaweek.com"
-									style="min-width:320px;height:630px;background-color:white;"></div>
-								<script type="text/javascript"
-									src="https://assets.calendly.com/assets/external/widget.js"></script>
-								<!-- Calendly inline widget end -->
+															<img src="osaw.png">
+								
+								
 							</div>
+							</a>
 						</div>
 					</div>
 
